# python-party

./: .gitattributes  .gitignore  404.html  CLAUDE.md  Makefile  PLAYGROUND.md  README.md  index.html  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-docs.yml  pr-preview.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
concepts/pipeline-data-flow/: index.html
concepts/schema-as-contract/: index.html
concepts/two-verification-gates/: index.html
concepts/typed-vs-dicts/: index.html
decisions/: index.html
decisions/0000-template/: index.html
decisions/0001-schema-driven-generation-with-xsdata/: index.html
decisions/0002-drop-csv-pickle-and-write_xml/: index.html
decisions/0003-xmlschema-as-validation-gate/: index.html
decisions/0004-two-gate-verification/: index.html
decisions/0005-placeholder-schema-runnable-now/: index.html
decisions/0006-codespaces-with-local-fallback/: index.html
decisions/0007-pin-python-3-9-4/: index.html
decisions/0008-generated-models-no-drift/: index.html
decisions/0009-mkdocs-material-mermaid-html-docs/: index.html
docs/: glossary.md  index.md  onboarding.md
docs/concepts/: pipeline-data-flow.md  schema-as-contract.md  two-verification-gates.md  typed-vs-dicts.md
docs/decisions/: 0000-template.md  0001-schema-driven-generation-with-xsdata.md  0002-drop-csv-pickle-and-write_xml.md  0003-xmlschema-as-validation-gate.md  0004-two-gate-verification.md  0005-placeholder-schema-runnable-now.md  0006-codespaces-with-local-fallback.md  0007-pin-python-3-9-4.md  0008-generated-models-no-drift.md  0009-mkdocs-material-mermaid-html-docs.md  0010-build-schema-object-directly.md  0010-xs3p-html-schema-reference.md  0011-xs3p-html-schema-reference.md  index.md
docs/how-to/: add-a-decision-record.md  build-the-docs-site.md  change-the-schema.md  run-the-migration-safety-comparison.md  swap-in-the-real-schema.md  use-the-codespace.md
docs/reference/: commands.md  index.md  schema-erd.md
docs/reference/schema/: index.md
docs/tutorials/: 01-start-here.md
examples/: calculation_input.json  calculation_input.xml  explore_platform.py
examples/reference/: trial_known_good.xml
glossary/: index.html
how-to/add-a-decision-record/: index.html
how-to/build-the-docs-site/: index.html
how-to/change-the-schema/: index.html
how-to/run-the-migration-safety-comparison/: index.html
how-to/swap-in-the-real-schema/: index.html
how-to/use-the-codespace/: index.html
onboarding/: index.html
pr-preview/pr-10/onboarding/: index.html
pr-preview/pr-12/onboarding/: index.html
pr-preview/pr-12/search/: search_index.json
pr-preview/pr-2/: 404.html  index.html
pr-preview/pr-2/decisions/: index.html
pr-preview/pr-2/glossary/: index.html
pr-preview/pr-2/onboarding/: index.html
pr-preview/pr-2/reference/: index.html
pr-preview/pr-2/search/: search_index.json
pr-preview/pr-7/: 404.html  index.html
pr-preview/pr-7/decisions/: index.html
pr-preview/pr-7/glossary/: index.html
pr-preview/pr-7/onboarding/: index.html
pr-preview/pr-7/reference/: index.html
pr-preview/pr-7/search/: search_index.json
pr-preview/pr-8/: index.html
pr-preview/pr-9/glossary/: index.html
pr-preview/pr-9/onboarding/: index.html
reference/: index.html
reference/commands/: index.html
reference/schema/: index.html
reference/schema-erd/: index.html
schema/: acoustic_dataset.xsd  calculation_input.xsd
search/: search_index.json
specs/001-codespace-xml-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/acoustic_dataset/: __init__.py  build.py  bundle.py  cli.py  compare.py  generate.py  mapping.py  schema_docs.py  schema_html.py  serialize.py  validate.py
tests/: conftest.py  test_smoke.py
tests/golden/: acoustic_dataset.xml
tests/integration/: test_bundle.py  test_compare.py  test_gates.py  test_pipeline.py  test_schema_docs.py  test_schema_html.py
tests/unit/: test_acoustics.py  test_build.py  test_typed_vs_dict.py
tools/xs3p/: README.md
tutorials/01-start-here/: index.html
(+62 files in other folders)
