[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "acoustic-dataset"
version = "0.0.1"
description = "Acoustic Reference Book Phase 1 — schema-driven XML Acoustic Dataset pipeline (scaffold)"
readme = "README.md"
# Target system is constrained to exactly Python 3.9.4; the devcontainer and CI pin
# that patch, while this floor stops us depending on 3.10+ syntax. See docs/decisions/0007.
requires-python = ">=3.9,<3.13"
license = { text = "See LICENSE" }
dependencies = [
    # Generate typed dataclasses from the XSD and bind objects <-> XML. Pinned to 25.7 — the
    # last xsdata line supporting the Python 3.9.4 target (26.x requires >=3.10) — so `make
    # generate` is byte-reproducible on the target for the CI drift gate. Bump deliberately and
    # re-run `make generate` to refresh the committed models. See docs/decisions/0001 and 0008.
    "xsdata[cli,lxml]==25.7",
    # Pure-Python XSD validation gate (XSD 1.1 capable). See docs/decisions/0003.
    "xmlschema>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
    "mypy>=1.8",
]
# Attractive HTML docs with native Mermaid ERDs. See docs/decisions/0009.
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
# Stable CLI surface (see specs/001-codespace-xml-scaffold/contracts/cli-commands.md).
acoustic = "acoustic_dataset.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
# Enforce 3.9 compatibility: ruff will flag 3.10+ syntax (e.g. `X | Y` unions
# in runtime positions) so we stay on the production floor. See docs/decisions/0007.
target-version = "py39"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Generated bindings are artifacts, never hand-edited — do not lint them.
"src/acoustic_dataset/models/*" = ["ALL"]

[tool.mypy]
python_version = "3.9"
packages = ["acoustic_dataset"]
ignore_missing_imports = true
# Generated models are excluded from type-checking (they are an artifact).
exclude = "src/acoustic_dataset/models/"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
